--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <!-- CSS only -->
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@1,200&family=Raleway:wght@100&family=Roboto:wght@100&family=Work+Sans:wght@300&display=swap" rel="stylesheet">
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Poppins:ital,wght@1,200&family=Raleway:wght@100&family=Roboto:wght@100&family=Work+Sans:wght@300&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 
 <link rel="stylesheet" href="style.css">
 </head>
@@ -15,9 +15,7 @@
     <section class="banner">
         <div class="txt">
             <h1 class="title">Select Your Best Five</h1>
-            <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit
-            officia consequat duis enim velit mollit. Exercitation veniam consequat sunt
-            nostrud amet.</p>
+            <p class="all-t">Paris Saint-Germain Football Club, commonly referred to as Paris Saint-Germain, Paris, Paris SG or simply PSG is a professional football club based in Paris, France. They compete in Ligue 1, the top division of French football.</p>
         </div>
     </section>
     <section id="profile-sec" class="profile-sec">
