--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
 <!DOCTYPE html>
+
+
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -29,9 +31,8 @@
                                 <div class="card-body">
                                 <h5 class="card-title">Lionel messi</h5>
                                 <p class="card-text">36 Goals <span>.</span> 120 Assist</p>
-                                <div class="card_btn">
-                                    <a href="#" class="btn">Select</a>
-                                </div>
+                                <button onclick="addCart(this)" class="btn btn-lg btn-primary">Select
+                                </button>
                                 </div>
                             </div>
                         </div>
@@ -41,9 +42,7 @@
                                 <div class="card-body">
                                 <h5 class="card-title">Neymar Jr.</h5>
                                 <p class="card-text">36 Goals <span>.</span> 120 Assist</p>
-                                <div class="card_btn">
-                                    <a href="#" class="btn">Select</a>
-                                </div>
+                                <button onclick="addCart(this)" class="btn btn-lg btn-primary">Select</button>
                                 </div>
                             </div>
                         </div>
@@ -53,9 +52,7 @@
                                 <div class="card-body">
                                 <h5 class="card-title">Kylian Mbappé</h5>
                                 <p class="card-text">36 Goals <span>.</span> 120 Assist</p>
-                                <div class="card_btn">
-                                    <a href="#" class="btn">Select</a>
-                                </div>
+                                <button type="button" onclick="addCart(this)" class="btn btn-lg btn-primary">Select</button>
                                 </div>
                             </div>
                         </div>
@@ -67,9 +64,7 @@
                                 <div class="card-body">
                                 <h5 class="card-title">Sergio Ramos</h5>
                                 <p class="card-text">36 Goals <span>.</span> 120 Assist</p>
-                                <div class="card_btn">
-                                    <a href="#" class="btn">Select</a>
-                                </div>
+                                <button type="button" onclick="addCart(this)" class="btn btn-lg btn-primary">Select</button>
                                 </div>
                             </div>
                         </div>
@@ -79,9 +74,7 @@
                                 <div class="card-body">
                                 <h5 class="card-title">Pablo Sarabia</h5>
                                 <p class="card-text">36 Goals <span>.</span> 120 Assist</p>
-                                <div class="card_btn">
-                                    <a href="#" class="btn">Select</a>
-                                </div>
+                                <button type="button" onclick="addCart(this)" class="btn btn-lg btn-primary">Select</button>
                                 </div>
                             </div>
                         </div>
@@ -91,9 +84,7 @@
                                 <div class="card-body">
                                 <h5 class="card-title">Marquinhos</h5>
                                 <p class="card-text">36 Goals <span>.</span> 120 Assist</p>
-                                <div class="card_btn">
-                                    <a href="#" class="btn">Select</a>
-                                </div>
+                                <button type="button" onclick="addCart(this)" class="btn btn-lg btn-primary">Select</button>
                                 </div>
                             </div>
                         </div>
@@ -105,9 +96,7 @@
                                 <div class="card-body">
                                 <h5 class="card-title">Presnel Kimpembe</h5>
                                 <p class="card-text">36 Goals <span>.</span> 120 Assist</p>
-                                <div class="card_btn">
-                                    <a href="#" class="btn">Select</a>
-                                </div>
+                                <button type="button" onclick="addCart(this)" class="btn btn-lg btn-primary">Select</button>
                                 </div>
                             </div>
                         </div>
@@ -117,9 +106,7 @@
                                 <div class="card-body">
                                 <h5 class="card-title">Nuno Mendes</h5>
                                 <p class="card-text">36 Goals <span>.</span> 120 Assist</p>
-                                <div class="card_btn">
-                                    <a href="#" class="btn">Select</a>
-                                </div>
+                                <button type="button" onclick="addCart(this)" class="btn btn-lg btn-primary">Select</button>
                                 </div>
                             </div>
                         </div>
@@ -129,9 +116,7 @@
                                 <div class="card-body">
                                 <h5 class="card-title">Gianluigi Donnarumma</h5>
                                 <p class="card-text">36 Goals <span>.</span> 120 Assist</p>
-                                <div class="card_btn">
-                                    <a href="#" class="btn">Select</a>
-                                </div>
+                                <button type="button" onclick="addCart(this)" class="btn btn-lg btn-primary">Select</button>
                                 </div>
                             </div>
                         </div>
@@ -139,20 +124,54 @@
                 </div>
                 <div class="col-md-3 pr_row">
                     <div class="row">
-                        <div class="col">
-                            <div class="card selcted_profile">
+                        <div class="col fst-sec">
+                            <div class="card selcted_profile ">
                                 <div class="card-body sl-p-h">
-                                  <h5 class="card-title">Selected-v</h5>
-                                </div>
+                                  <h5 class="card-title select-player select-v">Selected-V</h5>
+                                  <div id="show-name">
+                                  </div>
                             </div>
                         </div>
                     </div>
                     <div class="row end">
                         <div class="col">
                             <div class="card selcted_profile">
-                                <div class="card-body sl-p-h">
-                                  <h5 class="card-title">Budget</h5>
+                                <div class="card-body sl-p-h budget">
+                                  <h5 class="card-title bdt">Budget</h5>
+                                  <div class="bsec-1">
+                                  <div class="perplayer">
+                                    <label id="divtk">Per Player</label>
+                                    <input id="per-player" class="bsec-i" type="number">
+                                  </div>
+                                  <div class="calculate">
+                                    <button class="cal" onclick='playerBudget()'>
+                                        Calculate
+                                    </button>
                                 </div>
+                                  </div>
+                                  <div class="team">
+                                    <p>Player Expensess</p>
+                                    <p> </p><span>$</span><span id="playerExpenses">0</span></p>
+                                </div>
+                                <div class="team">
+                                    <div class="bill">
+                                    <div class="manager">
+                                    <label>Manager</label>
+                                    <input id="manager" class="bsec-i" type="number">
+                                </div>
+                                <div class="manager">
+                                    <label>Coach</label>
+                                    <input id="coach" class="bsec-i" type="number">
+                                </div>
+                            </div>
+                                <div class="calculate">
+                                    <button class="cal" onclick="totalV ()">
+                                        Calculate
+                                    </button>
+                                  </div>
+                                  <p class="total"><span>Total</span> <span id="total">0</span> </p>
+                                </div>
+                                
                             </div>
                         </div>
                     </div>
@@ -160,8 +179,20 @@
             </div>
         </div>
     </section>
+    <footer class="bg-dark p-5 text-center footer-end">
+        <p class="text-center text-warning">Copyright @ 2022 All Rights Reserved.
+        </p>
+        <p>
+        <span class="text-white">Name: Md. Keramot Ali </span>
+        </p>
+        <p>
+        <span class="text-white">Roll: 105622</span>&nbsp;&nbsp;
+        <span class="text-white">Reg. No. 1500905311 </span>
+        </p>
+      </footer>
 
     <!-- JavaScript Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+<script src="page.js"></script>
 </body>
 </html>
